--- a/src/Apontamento.API/appsettings.json
+++ b/src/Apontamento.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "eedd3e0aa3ec461458e24f0926987e09"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,6 +11,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApontamentoConnection": "Server=localhost,1433;Database=apontamentotdd;User ID=sa;Password=Ricardo@123;MultipleActiveResultSets=True;",
+    "ApontamentoConnection": "Server=localhost,1433;Database=apontamentonovo;User ID=sa;Password=Ricardo@123;MultipleActiveResultSets=True;"
   }
 }
